--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,10 @@ body {
   -moz-user-select: none;
   user-select: none;
 }
+
+/* CAROUSEL */
+
+.carousel-inner{
+  width: 100%;
+  max-height: 500px !important;
+}
