--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,16 @@ body {
   user-select: none;
 }
 
+/* TEXT AREA */
+
+.form-control {
+  min-height: 40px;
+  max-height: 100px;
+}
+
 /* CAROUSEL */
 
-.carousel-inner{
+.carousel-inner {
   width: 100%;
   max-height: 500px !important;
 }
